// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
.emotion-0 img {
  max-width: 100%;
  height: auto;
}

<div
  className="emotion-0"
/>
`;

exports[`renders with element props 1`] = `
.emotion-0 img {
  max-width: 100%;
  height: auto;
}

.emotion-0 h1 {
  font-size: 3px;
  font-weight: 900;
  font-size: 20px;
  font-weight: 900;
}

<div
  className="emotion-0"
/>
`;

exports[`renders with props 1`] = `
.emotion-0 {
  font-family: fantasy;
  line-height: 2;
  color: tomato;
}

.emotion-0 img {
  max-width: 100%;
  height: auto;
}

<div
  className="emotion-0"
  color="tomato"
  fontFamily="fantasy"
/>
`;

exports[`renders with responsive element props 1`] = `
.emotion-0 img {
  max-width: 100%;
  height: auto;
}

.emotion-0 h1 {
  font-size: 20px;
  font-weight: 900;
  mt: 3px;
  color: tomato;
  margin-top: 16px;
}

@media screen and (min-width:40em) {
  .emotion-0 h1 {
    font-size: 24px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 h1 {
    font-size: 32px;
  }
}

<div
  className="emotion-0"
/>
`;
